# Full-Text-Search-on-Documents

./: .env  README.md  pyproject.toml  requirement.txt  schema.sql
app/: main.py
app/api/v1/endpoints/: routes.py
app/core/: config.py
app/core/constants/: app_constant.py  exception_constant.py  logger_constant.py  response_constant.py
app/core/logger/: logging.py
app/dao/: search_dao.py
app/database/: rds.py
app/database/models/: search_index.py
app/services/implementation/: file_service.py  search_service.py
app/utils/: file_utils.py  text_extraction.py
