[tool.poetry]
name = "fts-backend"
version = "0.1.0"
description = "FastAPI Full-Text Search backend"
authors = ["Saday Bhat"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
python-multipart = "^0.0.7"
pydantic = "^2.6"
python-docx = "^1.1"
PyMuPDF = "^1.23"
zipstream-new = "^1.1"
loguru = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
